--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -53,3 +53,22 @@ body {
   .layui-input {
     padding-left: 32px;
   }
+
+  .iconfont{
+      margin-right: 8px;
+  }
+
+  .text-avatar {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background-color: #009688;
+    border-radius: 50%;
+    line-height: 40px;
+    text-align: center;
+    font-size: 20px;
+    color: #fff;
+    position: relative;
+    top: 4px;
+    margin-right: 10px;
+  }
